--- a/src/Eccube/Resource/locale/messages.en.yaml
+++ b/src/Eccube/Resource/locale/messages.en.yaml
@@ -738,6 +738,8 @@ admin.product.product_csv.delivery_fee_col: Shipping Charge
 admin.product.product_csv.delivery_fee_description: If the shipping charge is set per product, set the value more than 0
 admin.product.product_csv.tax_rate_col: Tax Rate
 admin.product.product_csv.tax_rate_description: If the Tax Rate is set per product, set the value more than 0
+admin.product.product_csv.purchase_restrict_id_col: Purchase Restrict ID
+admin.product.product_csv.purchase_restrict_id_description: If the Purchase Restrict ID is set per product, set the value registered purchase restrict id
 
 # Category CSV Templates
 admin.product.category_csv.category_id_col: Category ID
