--- a/src/Eccube/Resource/locale/messages.ja.yaml
+++ b/src/Eccube/Resource/locale/messages.ja.yaml
@@ -738,6 +738,8 @@ admin.product.product_csv.delivery_fee_col: 送料
 admin.product.product_csv.delivery_fee_description: 商品ごとの送料設定が有効の場合、0以上の数値を設定
 admin.product.product_csv.tax_rate_col: 税率
 admin.product.product_csv.tax_rate_description: 商品別税率機能設定が有効の場合、0以上の数値を設定
+admin.product.product_csv.purchase_restrict_id_col: 購入制限ルールID
+admin.product.product_csv.purchase_restrict_id_description: 購入制限を適用する場合は予めルールを登録した際の発行されたIDを指定してください。
 
 # カテゴリCSV雛形
 admin.product.category_csv.category_id_col: カテゴリID
